src/backend/cuda/snapshots/rjit__backend__cuda__test__scatter_const_mask.snap
---
source: src/backend/cuda/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 7405110827353704895 with 3 elements
===============================================
Kernel 7405110827353704895:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[40]) {

	.reg.b8   %b <11>; .reg.b16 %w<11>; .reg.b32 %r<11>;
	.reg.b64  %rd<11>; .reg.f32 %f<11>; .reg.f64 %d<11>;
	.reg.pred %p <11>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Literal, deps: [], ty: F32, reg: 4, data: Literal(1065353216), sbt_hash: 0 } =>
	mov.b32 %f4, 0x3f800000;


	// [1]: ScheduleVar { op: Data, deps: [], ty: F32, reg: 5, data: Buffer(0), sbt_hash: 0 } =>

	// [2]: ScheduleVar { op: Idx, deps: [], ty: U32, reg: 6, data: None, sbt_hash: 0 } =>
	mov.u32 %r6, %r0;


	// [3]: ScheduleVar { op: Data, deps: [], ty: Bool, reg: 7, data: Buffer(1), sbt_hash: 0 } =>

	// [4]: ScheduleVar { op: Literal, deps: [], ty: Bool, reg: 8, data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p8, 0x1;


	// [5]: ScheduleVar { op: Gather, deps: [SVarId(3), SVarId(2), SVarId(4)], ty: Bool, reg: 9, data: Buffer(2), sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+16];
	cvt.u64.u32 %rd3, %r6;
	add.u64 %rd3, %rd3, %rd0;
	ld.global.nc.u8 %w0, [%rd3];
	setp.ne.u16 %p9, %w0, 0;

	// [6]: ScheduleVar { op: Scatter { op: None }, deps: [SVarId(0), SVarId(1), SVarId(2), SVarId(5)], ty: Void, reg: 10, data: None, sbt_hash: 0 } =>
	@!%p9 bra l_10_done;

	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r6, 4, %rd0;
	st.global.f32 [%rd3], %f4;
	l_10_done:

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

